# leto

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
Include/: TargetArchitecture.cmake
Include/CGLM/simd/sse2/: mat4.h
Include/GLAD2/: gl.h  khrplatform.h
Include/GLFW/: glfw3.h
Libraries/: cglm-win-64.lib  glad2-win-64.lib
Resources/Shaders/basic/: frag.fs  vert.vs
Source/: Main.c
Source/Diagnostic/: Platform.h  Version.h
Source/Initialization/: Application.c  Application.h  Window.c  Window.h
Source/Input/: Files.c  Files.h  Shaders.c  Shaders.h
Source/Output/: Errors.c  Errors.h
Source/Rendering/: Camera.c  Camera.h
Source/Utilities/: Macros.h  Types.h
inc/asmp/: ObjMaterial.h  aabb.h  anim.h  cexport.h  cfileio.h  cimport.h  color4.h  defs.h  importerdesc.h  light.h  material.h  matrix3x3.h  matrix4x4.h  mesh.h  metadata.h  postprocess.h  quaternion.h  revision.h  scene.h  texture.h  types.h  vector3.h  version.h
rss/meshes/: cube.mtl
rss/models/: cube.fbx
rss/shaders/: basic.frag  basic.vert
src/: main.c  platform.h
src/interface/: renderer.c  renderer.h  window.c  window.h
src/output/: logger.c  logger.h
src/utilities/: attributes.h  macros.h  strings.c  strings.h  vectors.c  vectors.h
src/utilities/memory/: allocate.c  allocate.h  free.c  free.h
src/utilities/types/: hashmap.c  hashmap.h
